--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -14,6 +14,8 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.6",
+    "bnc-onboard": "^1.14.0",
+    "ethers": "^5.0.19",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^5.2.0",
