Contracts: Set up deployment script with different providers and network

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -26,6 +26,7 @@
     "@openzeppelin/contracts": "^3.2.0",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
+    "dotenv": "8.2.0",
     "merkle-patricia-tree": "^4.0.0"
   }
 }
