--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -2,21 +2,25 @@
   "name": "bridge-node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
+    "dev": "tsc --watch",
+    "build": "tsc",
     "lint": "prettier-standard --format",
     "geth": "./scripts/start_geth.sh",
     "ovm": "./scripts/start_ovm.sh",
-    "watcher1": "node watchers/watcher1.js",
-    "watcher2": "node watchers/watcher2.js",
-    "watcher3": "node watchers/watcher3.js"
+    "watcher1": "node dist/watchers/watcher1.js",
+    "watcher2": "node dist/watchers/watcher2.js",
+    "watcher3": "node dist/watchers/watcher3.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@authereum/utils": "^0.1.10",
-    "ethers": "^5.0.19"
+    "ethers": "^5.0.19",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "prettier-standard": "^16.4.1"
