--- a/packages/bridge-node/tsconfig.json
+++ b/packages/bridge-node/tsconfig.json
@@ -4,10 +4,13 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "target": "es6",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2016",
     "noImplicitAny": true,
+    "noUnusedLocals": false,
     "moduleResolution": "node",
-    "sourceMap": true,
+    "sourceMap": false,
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
