--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "@authereum/utils": "^0.1.12",
+    "dotenv": "^8.2.0",
     "ethers": "^5.0.19",
     "module-alias": "^2.2.2",
     "typescript": "^4.0.5"
