--- a/packages/bridge-node/tsconfig.json
+++ b/packages/bridge-node/tsconfig.json
@@ -7,7 +7,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2016",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noUnusedLocals": false,
     "moduleResolution": "node",
     "sourceMap": false,
