create contracts package and link to frontend

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "contracts",
+  "name": "@poc/contracts",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Authereum Labs, Inc.",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/contracts.js",
+  "files": [
+    "contracts",
+    "artifacts"
+  ],
   "scripts": {
     "test": "hardhat test"
   },
