bridge-node: dockerfy arbitrum setup scripts

--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -10,12 +10,7 @@
     "dev": "tsc --watch",
     "build": "tsc",
     "lint": "prettier-standard --format",
-    "geth": "./scripts/start_geth.sh",
-    "ovm": "./scripts/start_ovm.sh",
-    "arbitrum:init": "ts-node docker/arbitrum/initialize.ts init",
-    "arbitrum:run": "python docker/arbitrum/arb_deploy.py",
-    "arbitrum:run2": "docker-compose -f docker/arbitrum/docker-compose.yml up",
-    "arbitrum:clean": "rm -rf docker/arbitrum/data"
+    "arbitrum:clean": "rm -rf l2_nodes/arbitrum/data"
   },
   "author": "",
   "license": "ISC",
@@ -24,11 +19,8 @@
     "@types/yargs": "^15.0.10",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.19",
-    "fs-extra": "^9.0.1",
     "module-alias": "^2.2.2",
-    "typescript": "^4.0.5",
-    "yargs": "^16.1.1",
-    "yars": "^1.2.0"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
     "prettier-standard": "^16.4.1"
