--- a/packages/bridge-node/Makefile
+++ b/packages/bridge-node/Makefile
@@ -25,10 +25,19 @@ docker-registry-push:
 # Build docker image and push to AWS registry
 .PHONY: docker-build-and-push
 docker-build-and-push: docker-registry-login docker-build docker-image-tag docker-registry-push
-
 .PHONY: docker-start
 docker-start:
 	docker run --env-file .env authereum/bridge-node
+
+arbitrum-validator-setup-docker-build:
+	(cd l2_nodes/arbitrum && docker build -f Dockerfile -t arbitrum-validator-setup .)
+
+arbitrum-validator-setup-docker-image-tag:
+	docker tag arbitrum-validator-setup:latest 874777227511.dkr.ecr.us-east-1.amazonaws.com/arbitrum-validator-setup:latest
+
+arbitrum-validator-setup-docker-registry-push:
+	$(eval REV=$(shell git rev-parse HEAD | cut -c1-7))
+	docker push 874777227511.dkr.ecr.us-east-1.amazonaws.com/arbitrum-validator-setup:latest
 
 arbitrum-validator-docker-image-tag:
 	docker tag arb-validator:latest 874777227511.dkr.ecr.us-east-1.amazonaws.com/arbitrum-validator:latest
