Frontend: Add prettier-standard linter

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -26,6 +26,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "npm start",
+    "lint": "prettier-standard --format",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -47,5 +49,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier-standard": "^16.4.1"
   }
 }
