--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,10 +16,11 @@
     "@types/react-router-dom": "^5.1.6",
     "bnc-onboard": "^1.14.0",
     "ethers": "^5.0.19",
+    "gridplus-sdk": "^0.6.1",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
+    "react-scripts": "4.0.1",
     "to-hex": "0.0.15",
     "typescript": "^3.2.1",
     "web-vitals": "^0.2.4"
