Update package organization

--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bridge-node",
-  "version": "1.0.0",
+  "name": "@hop-exchange/bridge-node",
+  "version": "0.0.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
