--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@poc/contracts",
+  "name": "@hop-exchange/contracts",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "Authereum Labs, Inc.",
+  "author": "",
   "homepage": "",
   "license": "ISC",
   "files": [
@@ -10,7 +10,8 @@
     "artifacts"
   ],
   "scripts": {
-    "test": "hardhat test"
+    "test": "hardhat test",
+    "build": "hardhat compile"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
