FE: WIP Create governance page

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
     "@types/jest": "26.0.15",
+    "@types/luxon": "1.25.0",
     "@types/node": "12.0.0",
     "@types/react": "16.9.53",
     "@types/react-dom": "16.9.8",
@@ -18,8 +19,10 @@
     "bnc-onboard": "1.14.0",
     "ethers": "5.0.19",
     "gridplus-sdk": "0.6.1",
+    "luxon": "1.25.0",
     "react": "16.8.0",
     "react-dom": "16.8.0",
+    "react-feather": "2.0.9",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
     "to-hex": "0.0.15",
