--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/address": "5.0.8",
     "@hop-exchange/contracts": "0.0.0",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
