Frontend: Add modal component with transition

--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "5.11.4",
     "@testing-library/react": "11.1.0",
     "@testing-library/user-event": "12.1.10",
+    "@types/classnames": "2.2.11",
     "@types/jest": "26.0.15",
     "@types/luxon": "1.25.0",
     "@types/node": "12.0.0",
@@ -18,6 +19,7 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.6",
     "bnc-onboard": "1.14.0",
+    "classnames": "2.2.6",
     "ethers": "5.0.19",
     "gridplus-sdk": "0.6.1",
     "luxon": "1.25.0",
