--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "example": "npm run build && node dist/example/example.js",
+    "arb-bot": "npm run build && node dist/arb-bot/main.js",
     "start": "node .",
     "dev": "tsc --watch",
     "build": "tsc",
@@ -16,7 +17,9 @@
   "license": "ISC",
   "dependencies": {
     "@authereum/utils": "^0.1.12",
+    "@hop-exchange/contracts": "0.0.0",
     "@types/yargs": "^15.0.10",
+    "chalk": "4.1.0",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.19",
     "module-alias": "^2.2.2",
