--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -15,7 +15,7 @@
     "@types/jest": "26.0.15",
     "@types/luxon": "1.25.0",
     "@types/node": "12.0.0",
-    "@types/react": "16.9.53",
+    "@types/react": "17.0.0",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.6",
     "bnc-onboard": "1.14.0",
@@ -59,6 +59,14 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "4.9.1",
+    "@typescript-eslint/parser": "4.9.1",
+    "eslint": "7.15.0",
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "prettier-standard": "16.4.1"
   }
 }
