contracts: Fix tests for credit debit accounting

--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -7,7 +7,7 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
       "noImplicitAny": false,
-      "noUnusedLocals": true,
+      "noUnusedLocals": false,
       "moduleResolution": "node",
       "sourceMap": false,
       "outDir": "dist",
