--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -24,9 +24,11 @@
     "@types/yargs": "^15.0.10",
     "chalk": "4.1.0",
     "commander": "6.2.0",
+    "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.19",
     "module-alias": "^2.2.2",
+    "p-throttle": "4.0.0",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
