--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -13,8 +13,8 @@
     "test": "hardhat test",
     "build": "hardhat compile",
     "publish-module": "npm publish --tag beta --access public",
-    "clean": "rimraf dist",
-    "release": "npm run clean && npm run publish-module"
+    "release": "npm run clean && npm run publish-module",
+    "clean": "rimraf cache artifacts"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
@@ -25,15 +25,17 @@
     "chai": "^4.2.0",
     "ethereum-waffle": "^3.1.1",
     "ethers": "^5.0.17",
-    "hardhat": "^2.0.2",
+    "hardhat": "2.0.8",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   },
   "dependencies": {
+    "@eth-optimism/plugins": "0.0.4",
     "@openzeppelin/contracts": "^3.2.0",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "dotenv": "8.2.0",
-    "merkle-patricia-tree": "^4.0.0"
+    "merkle-patricia-tree": "^4.0.0",
+    "rimraf": "3.0.2"
   }
 }
