--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "packages/contracts"]
 	path = packages/contracts
-	url = git@github.com:hop-exchange/contracts.git
+	url = https://github.com/hop-exchange/contracts.git
