--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -37,7 +37,7 @@
     "start": "react-scripts start",
     "dev": "BROWSER=none npm start",
     "lint": "prettier-standard --format",
-    "build": "react-scripts build",
+    "build": "INLINE_RUNTIME_CHUNK=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "deploy": "netlify deploy --prod",
