--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,6 +16,7 @@
     "@types/jest": "26.0.15",
     "@types/luxon": "1.25.0",
     "@types/node": "12.0.0",
+    "@types/numeral": "2.0.0",
     "@types/react": "17.0.0",
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.6",
@@ -26,6 +27,7 @@
     "ethers": "5.0.28",
     "gridplus-sdk": "0.6.1",
     "luxon": "1.25.0",
+    "numeral": "2.0.6",
     "react": "16.10.2",
     "react-dom": "16.8.0",
     "react-feather": "2.0.9",
