--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -27,6 +27,7 @@
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.28",
+    "ipfs-http-client": "^49.0.2",
     "module-alias": "^2.2.2",
     "p-throttle": "4.0.0",
     "typescript": "^4.0.5"
