bridge-node: Add basic transfer tests

--- a/packages/bridge-node/tsconfig.json
+++ b/packages/bridge-node/tsconfig.json
@@ -10,13 +10,15 @@
     "noImplicitAny": false,
     "noUnusedLocals": false,
     "moduleResolution": "node",
+    "skipLibCheck": true,
     "sourceMap": false,
     "outDir": "dist",
     "baseUrl": "src",
     "paths": {
       "*": ["node_modules/*", "src/types/*"],
       "src/*": ["*"]
-    }
+    },
+    "typeRoots": ["./node_modules/@types", "./@types"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "test/*"]
 }
