--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest test",
     "example": "ts-node src/scripts/optimismToArbitrum.ts",
     "arb-bot": "npm run build && node bin/bridge-node arb-bot",
     "start": "node .",
@@ -29,11 +29,16 @@
     "ethers": "^5.0.28",
     "ipfs-http-client": "^49.0.2",
     "module-alias": "^2.2.2",
+    "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "web3-utils": "^1.3.4"
   },
   "devDependencies": {
-    "prettier-standard": "^16.4.1"
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
+    "prettier-standard": "^16.4.1",
+    "ts-jest": "^26.5.2"
   },
   "_moduleAliases": {
     "src": "src"
