--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -29,8 +29,10 @@
     "ethers": "^5.0.28",
     "ipfs-http-client": "^49.0.2",
     "module-alias": "^2.2.2",
+    "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "web3-utils": "^1.3.4"
   },
   "devDependencies": {
     "prettier-standard": "^16.4.1"
