--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -36,7 +36,8 @@
     "react-scripts": "4.0.1",
     "to-hex": "0.0.15",
     "typescript": "3.9.5",
-    "web-vitals": "0.2.4"
+    "web-vitals": "0.2.4",
+    "web3-utils": "1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
