bridge-node: Settle bonded withdrawal test

--- a/packages/bridge-node/Dockerfile
+++ b/packages/bridge-node/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:15.0.1
+FROM node:11.15.0
 
 # Create the working directory and give node use permissions
 RUN mkdir -p /usr/src/app/node_modules && chown -R node:node /usr/src/app
@@ -9,7 +9,7 @@ USER node
 
 COPY --chown=node:node package*.json ./
 
-RUN npm install || true
+RUN npm install
 
 COPY --chown=node:node . .
 
