--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -28,11 +28,13 @@
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.28",
+    "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
+    "subleveldown": "^5.0.1",
     "typescript": "^4.0.5",
     "web3-utils": "^1.3.4"
   },
