--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -11,7 +11,8 @@
     "dev": "tsc --watch",
     "build": "tsc",
     "lint": "prettier-standard --format",
-    "arbitrum:clean": "rm -rf l2_nodes/arbitrum/data"
+    "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
+    "clean:db": "rm -rf src/db/db_data"
   },
   "bin": {
     "bridge-node": "bin/bridge-node"
@@ -20,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@authereum/utils": "^0.1.12",
+    "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
     "@hop-exchange/contracts": "0.0.2",
     "@types/yargs": "^15.0.10",
@@ -27,7 +29,9 @@
     "commander": "6.2.0",
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
+    "ethereumjs-util": "^7.0.9",
     "ethers": "^5.0.28",
+    "level": "^6.0.1",
     "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
