--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -35,6 +35,7 @@
     "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
+    "merkletreejs": "^0.2.13",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
