bridge-node: Dry up shared watcher methods

--- a/packages/bridge-node/tsconfig.json
+++ b/packages/bridge-node/tsconfig.json
@@ -7,8 +7,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es2016",
-    "noImplicitAny": false,
-    "noUnusedLocals": false,
+    "noImplicitAny": true,
+    "noUnusedLocals": true,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "sourceMap": false,
