--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -24,6 +24,8 @@
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
     "@hop-exchange/contracts": "0.0.2",
+    "@types/debounce-promise": "^3.1.3",
+    "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
     "chalk": "4.1.0",
     "commander": "6.2.0",
