bridge-node: Add tx queue decorator

--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -27,12 +27,13 @@
     "@types/debounce-promise": "^3.1.3",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
+    "async-mutex": "^0.3.1",
     "chalk": "4.1.0",
     "commander": "6.2.0",
     "debounce-promise": "3.1.2",
     "dotenv": "^8.2.0",
     "ethereumjs-util": "^7.0.9",
-    "ethers": "^5.0.28",
+    "ethers": "^5.0.32",
     "level": "^6.0.1",
     "level-sublevel": "^6.6.5",
     "leveldown": "^5.6.0",
