FE/bridge-node: Add additional tokens

--- a/packages/bridge-node/Makefile
+++ b/packages/bridge-node/Makefile
@@ -4,24 +4,24 @@ docker-registry-login:
 
 # Build docker target
 docker-build:
-	docker build -f Dockerfile -t authereum/bridge-node .
+	docker build -f Dockerfile -t hopprotocol/hop-node .
 
 # Tag docker image
 docker-image-tag:
 	$(eval REV=$(shell git rev-parse HEAD | cut -c1-7))
-	docker tag authereum/bridge-node:latest 874777227511.dkr.ecr.us-east-1.amazonaws.com/authereum/bridge-node:latest
-	docker tag authereum/bridge-node:latest 874777227511.dkr.ecr.us-east-1.amazonaws.com/authereum/bridge-node:$(REV)
+	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:latest
+	docker tag hopprotocol/hop-node:latest hopprotocol/hop-node:$(REV)
 
 # Push to registry
 docker-registry-push:
 	$(eval REV=$(shell git rev-parse HEAD | cut -c1-7))
-	docker push 874777227511.dkr.ecr.us-east-1.amazonaws.com/authereum/bridge-node:latest
-	docker push 874777227511.dkr.ecr.us-east-1.amazonaws.com/authereum/bridge-node:$(REV)
+	docker push hopprotocol/hop-node:latest
+	docker push hopprotocol/hop-node:$(REV)
 
 # Build docker image and push to AWS registry
 docker-build-and-push: docker-registry-login docker-build docker-image-tag docker-registry-push
 docker-start:
-	docker run --env-file .env authereum/bridge-node
+	docker run --env-file .env hopprotocol/hop-node
 
 arbitrum-validator-setup-docker-build:
 	(cd l2_nodes/arbitrum && docker build -f Dockerfile -t arbitrum-validator-setup .)
