--- a/packages/bridge-node/package.json
+++ b/packages/bridge-node/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "jest test",
-    "example": "ts-node src/scripts/optimismToArbitrum.ts",
+    "bonder": "npm run build && node bin/bridge-node bonder",
     "arb-bot": "npm run build && node bin/bridge-node arb-bot",
     "start": "node .",
     "dev": "tsc --watch",
