--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "@hop-exchange/frontend",
+  "name": "@hop-protocol/frontend",
   "version": "0.0.0",
   "private": true,
   "dependencies": {
     "@aws-sdk/client-route-53": "3.4.1",
     "@ethersproject/address": "5.0.8",
-    "@hop-exchange/contracts": "0.0.2",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.56",
