--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@hop-protocol/hop-node",
-  "version": "0.0.0",
-  "description": "",
+  "version": "0.0.1-beta.0",
+  "description": "The Hop Node for Hop Protocol",
   "main": "dist/index.js",
   "scripts": {
     "test": "jest test",
@@ -13,7 +13,7 @@
     "lint": "prettier-standard --format",
     "clean": "rm -rf dist",
     "clean:arbitrum": "rm -rf l2_nodes/arbitrum/data",
-    "clean:db": "rm -rf src/db/db_data"
+    "clean:db": "rm -rf db_data"
   },
   "bin": {
     "hop-node": "bin/hop-node"
@@ -26,6 +26,7 @@
     "@ethersproject/experimental": "^5.0.9",
     "@ethersproject/hdnode": "^5.0.9",
     "@types/debounce-promise": "^3.1.3",
+    "@types/mkdirp": "^1.0.1",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
     "async-mutex": "^0.3.1",
@@ -40,6 +41,7 @@
     "leveldown": "^5.6.0",
     "levelup": "^4.4.0",
     "merkletreejs": "^0.2.13",
+    "mkdirp": "^0.5.5",
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
