--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "test": "jest test",
     "dev": "npm run version && tsc --watch",
-    "build": "npm run version && npm run build:ts && npm run build:browser",
+    "build": "npm run version && npm run build:ts",
     "build:ts": "tsc",
     "build:browser": "browserify -t [ babelify --presets [ @babel/preset-env ] ] dist/index.js | uglifyjs > hop.js",
     "clean": "rimraf dist",
@@ -44,6 +44,7 @@
     "@types/node": "^12.11.7",
     "@typescript-eslint/eslint-plugin": "^1.9.0",
     "@typescript-eslint/parser": "^2.31.0",
+    "aliasify": "^2.1.0",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
     "jest": "^26.6.3",
