hop-node: Generalize for L1 testnets

--- a/packages/hop-node/example/config.json
+++ b/packages/hop-node/example/config.json
@@ -1,6 +1,7 @@
 {
+  "network": "kovan",
   "networks": {
-    "kovan": {
+    "ethereum": {
       "rpcUrl": "https://kovan.rpc.hop.exchange"
     },
     "optimism": {
