--- a/packages/hop-node/package.json
+++ b/packages/hop-node/package.json
@@ -27,6 +27,7 @@
     "@ethersproject/hdnode": "^5.0.9",
     "@types/debounce-promise": "^3.1.3",
     "@types/mkdirp": "^1.0.1",
+    "@types/prompt": "^1.1.0",
     "@types/subleveldown": "^4.1.0",
     "@types/yargs": "^15.0.10",
     "async-mutex": "^0.3.1",
@@ -47,6 +48,7 @@
     "module-alias": "^2.2.2",
     "node-fetch": "^2.6.1",
     "p-throttle": "4.0.0",
+    "prompt": "^1.1.0",
     "subleveldown": "^5.0.1",
     "typescript": "^4.0.5",
     "web3-utils": "^1.3.4"
