--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@aws-sdk/client-route-53": "3.4.1",
+    "@hop-protocol/sdk": "0.0.1-beta.0",
     "@ethersproject/address": "5.0.8",
     "@material-ui/core": "4.11.0",
     "@material-ui/icons": "4.9.1",
@@ -68,6 +68,7 @@
     ]
   },
   "devDependencies": {
+    "@aws-sdk/client-route-53": "3.4.1",
     "@typescript-eslint/eslint-plugin": "4.9.1",
     "@typescript-eslint/parser": "4.9.1",
     "eslint": "7.15.0",
