--- a/packages/hop-node/tsconfig.json
+++ b/packages/hop-node/tsconfig.json
@@ -8,7 +8,7 @@
     "experimentalDecorators": true,
     "target": "ES2017",
     "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "moduleResolution": "node",
     "skipLibCheck": true,
     "sourceMap": false,
