--- a/packages/sdk/tsconfig.json
+++ b/packages/sdk/tsconfig.json
@@ -12,7 +12,7 @@
     "skipLibCheck": true,
     "target": "es2015",
     "noImplicitAny": false,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "moduleResolution": "node",
     "sourceMap": false,
     "outDir": "dist",
